--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^5.2.9
   drop_shadow_image: ^0.9.1
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
