--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mic_music_app
+name: micmusic
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  mvc_pattern: ^8.12.0
+  flutter_screenutil: ^5.7.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +62,21 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/img/DP.png
+    - assets/img/album.svg
+    - assets/img/download.svg
+    - assets/img/playlist.svg
+    - assets/img/artist.svg
+    - assets/img/video_library.svg
+    - assets/img/Image1.png
+    - assets/img/Image2.png
+    - assets/img/Image3.png
+    - assets/img/Image4.png
+    - assets/img/Image5.png
+    - assets/img/Image6.png
+    - assets/img/Image7.png
+    - assets/img/Image8.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,6 +90,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+      - family: CustomIcons
+        fonts:
+          - asset: fonts/CustomIcons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
