--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   mvc_pattern: ^8.12.0
   flutter_screenutil: ^5.7.0
   google_fonts: ^4.0.3
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/ProfilePic.png
     - assets/img/DP.png
     - assets/img/album.svg
     - assets/img/download.svg
