--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   google_fonts: ^4.0.3
   flutter_media_metadata: ^1.0.0+1
+  mvc_pattern: ^8.12.0
 
 
   # The following adds the Cupertino Icons font to your application.
