--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/images/Image1.png
     - assets/images/Image9.png
     - assets/images/Image3.png
+    - assets/images/Image5.png
     - assets/images/Image6.png
     - assets/images/Image10.png
     - assets/images/Image11.png
