--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = mic_music_app
+PRODUCT_NAME = geezo_music_ui
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.micMusicApp
+PRODUCT_BUNDLE_IDENTIFIER = com.example.geezoMusicUi
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
