--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,9 @@ flutter:
     - assets/images/Image12.png
     - assets/images/Image13.png
     - assets/images/Image14.png
+    - assets/images/RadioImage1.png
+    - assets/images/RadioImage2.png
+    - assets/images/RadioImage3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
