--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   google_fonts: ^4.0.3
   image_picker: ^0.8.7+4
+  syncfusion_flutter_sliders: ^21.1.41
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +93,11 @@ flutter:
     - assets/images/RadioImage1.png
     - assets/images/RadioImage2.png
     - assets/images/RadioImage3.png
+    - assets/images/RadioPopular1.png
+    - assets/images/RadioPopular2.png
+    - assets/images/RadioPopular3.png
+    - assets/images/RadioPlay1.png
+    - assets/images/RadioDetailsBackground.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -106,9 +112,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-      - family: CustomIcons
-        fonts:
-          - asset: fonts/CustomIcons.ttf
+    - family: CustomIcons
+      fonts:
+        - asset: fonts/CustomIcons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
