--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -4,12 +4,10 @@ project(runner LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-
-set(BINARY_NAME "micmusic")
+set(BINARY_NAME "mic_geezo_explore")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.micmusic")
-
+set(APPLICATION_ID "com.example.mic_geezo_explore")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
