--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,12 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-
-PRODUCT_NAME = micmusic
+PRODUCT_NAME = mic_geezo_explore
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.micmusic
-
+PRODUCT_BUNDLE_IDENTIFIER = com.example.micGeezoExplore
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
