--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   file_picker: ^5.2.9
   drop_shadow_image: ^0.9.1
   transparent_image: ^2.0.1
+  audio_video_progress_bar: ^1.0.1
+  smooth_page_indicator: ^1.1.0
+  readmore: ^2.2.0
 
 
 
@@ -78,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
+    - assets/
     - assets/images/
     - assets/images/ProfilePic.png
     - assets/img/DP.png
