--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   audio_video_progress_bar: ^1.0.1
   smooth_page_indicator: ^1.1.0
   readmore: ^2.2.0
+  introduction_screen: ^3.1.8
 
 
 
@@ -81,6 +82,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
+    - assets/images/1.png
+    - assets/images/2.png
+    - assets/fonts/Montserrat.ttf
+    - assets/images/3.png
     - assets/
     - assets/images/
     - assets/images/ProfilePic.png
